<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboteq</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mansishrirang.patil@thws.de">Mansi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>roboteq_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>diagnostic_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>joint_limits</depend>
  <depend>urdf</depend>
  <depend>std_msgs</depend>
  <depend>Boost</depend>
  <depend>pluginlib</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
